# post-commands

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md
config/: default.toml
src/: app.rs  args.rs  command.rs  config.rs  error.rs  main.rs  router.rs
test/: watch.sh
test/requests/: post-command.sh
test/server/: config.toml
test/server/commands/: test.sh
