[package]
name = "post-commands"
version = "0.1.0"
authors = ["Tobias Strobel <code@tobx.de>"]
edition = "2021"
description = """
execute preconfigured commands via HTTP post requests
"""
readme = "README.md"
homepage = "https://github.com/tobx/post-commands"
repository = "https://github.com/tobx/post-commands"
license = "MIT"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.215"
thiserror = "2.0.3"
tokio = "1.41.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
