[package]
name = "post-commands"
version = "0.1.4"
authors = ["Tobias Strobel <code@tobx.de>"]
edition = "2021"
description = """
execute preconfigured commands via HTTP post requests
"""
readme = "README.md"
repository = "https://github.com/tobx/post-commands"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
keywords = ["command", "remote"]
exclude = [".editorconfig", ".vscode/", "test/"]

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.5"
env_logger = "0.11.6"
log = "0.4.22"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = "1.43.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
